--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <section>
         <h2>Bio</h2>
-        <p>Hello! I am a passionate technology student currently pursuing my B.Tech.<br/>
+        <p>Hello! I am a passionate technology student currently pursuing my B.Tech.
            I enjoy coding, learning new programming languages, and building creative web projects.</p>
     </section>
 
@@ -37,4 +37,5 @@
     </section>
 </body>
 </html>
+
 
